# llvm-playground

./: .gitignore  README.md
00-SDL/: CMakeLists.txt  Makefile  README.md  app.c  sim.c  sim.h  start.c
00-SDL/IR/: app.ll  app_optimized.ll  one-cycle-app.ll
00-SDL/include/: GUI-lib.h
00-SDL/lib/: GUI-lib.c
00-SDL/src/: app.c  one-cycle-app.c  start.c
01-LLVM-Pass/: CMakeLists.txt  README.md  analyze_ir_trace.py  logger.cpp  pass.cpp
01-LLVM-Pass/src/: analyze_ir_trace.py  logger.c  pass.cpp
02-LLVM-IR-Builder/: CMakeLists.txt  README.md
02-LLVM-IR-Builder/src/: IR-Builder.cpp
03-ASM-To-IR/: AsmToIRGen.cpp  CMakeLists.txt  README.md
03-ASM-To-IR/asm/: app.txt
03-ASM-To-IR/include/: Builder.h  CPU.h  Instructions.def  Instructions.h
03-ASM-To-IR/src/: Builder.cpp  Instructions.cpp
